--- a/src/components/cardlist/CardList.css
+++ b/src/components/cardlist/CardList.css
@@ -1,7 +1,9 @@
 .card-list {
-    width: 85vw;
+    width: 80%;
     margin: 0 auto;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-gap: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
 }
