--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -11,4 +11,8 @@
     font-family: 'SEGA LOGO FONT','Bigelow Rules';
     font-size: 72px;
     color: #0ccac4;
+    margin-bottom: 2rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
   }
